# OpenCOLLADA

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  COLLADA.sln  COLLADANextGen.sln  COLLADASaxFrameworkLoader.sln  Makefile  OpenCOLLADAConfig.cmake.in  README  README.md  README_OSX.rtf  SConscript  SConstruct  generate_make.sh  generate_vs2013.bat  generate_vs2013_cmake_2.8.12.2.bat  generate_vs2015.bat  generate_vs2017.bat  generate_xcode.sh  temp.txt
COLLADABaseUtils/: .gitignore  CMakeLists.txt  SConscript
COLLADABaseUtils/include/: COLLADABU.h  COLLADABUException.h  COLLADABUHashFunctions.h  COLLADABUHashMap.h  COLLADABUIDList.h  COLLADABUNativeString.h  COLLADABUPcreCompiledPattern.h  COLLADABUPlatform.h  COLLADABUPrerequisites.h  COLLADABUStableHeaders.h  COLLADABUStringUtils.h  COLLADABUURI.h  COLLADABUUtils.h  COLLADABUVersionInfo.h  COLLADABUhash_map.h
COLLADABaseUtils/scripts/: COLLADABaseUtils.vcproj  COLLADABaseUtils.vcxproj  COLLADABaseUtils.vcxproj.filters  SConscript
COLLADABaseUtils/src/: COLLADABUHashFunctions.cpp  COLLADABUIDList.cpp  COLLADABUNativeString.cpp  COLLADABUPcreCompiledPattern.cpp  COLLADABUPrecompiledHeaders.cpp  COLLADABUStringUtils.cpp  COLLADABUURI.cpp  COLLADABUUtils.cpp
COLLADABaseUtils/template/: template.cpp  template.h
COLLADAFramework/: .gitignore  CMakeLists.txt  COLLADAFramework.sln  SConscript
COLLADAFramework/include/: COLLADAFW.h  COLLADAFWAccessor.h  COLLADAFWAnimatable.h  COLLADAFWAnimatableBool.h  COLLADAFWAnimatableFloat.h  COLLADAFWAnimation.h  COLLADAFWAnimationClip.h  COLLADAFWAnimationCurve.h  COLLADAFWAnimationList.h  COLLADAFWAnnotate.h  COLLADAFWArray.h  COLLADAFWArrayElement.h  COLLADAFWArrayPrimitiveType.h  COLLADAFWAxisInfo.h  COLLADAFWCamera.h  COLLADAFWCode.h  COLLADAFWColor.h  COLLADAFWColorOrTexture.h  COLLADAFWConstants.h  COLLADAFWController.h  COLLADAFWDoubleFloatOrIntType.h  COLLADAFWEdge.h  COLLADAFWEffect.h  COLLADAFWEffectCommon.h  COLLADAFWException.h  COLLADAFWExtraData.h  COLLADAFWExtraKeys.h  COLLADAFWFileInfo.h  COLLADAFWFloatDoubleOrIntType.h  COLLADAFWFloatOrDoubleArray.h  COLLADAFWFloatOrParam.h  COLLADAFWFormula.h  COLLADAFWFormulaNewParam.h  COLLADAFWFormulas.h  COLLADAFWGeometricElement.h  COLLADAFWGeometry.h  COLLADAFWGravity.h  COLLADAFWHashFunctions.h  COLLADAFWILoader.h  COLLADAFWIWriter.h  (+108 more)
COLLADAFramework/scripts/: COLLADAFramework.vcproj  COLLADAFramework.vcxproj  COLLADAFramework.vcxproj.filters  SConscript
COLLADAFramework/src/: COLLADAFW.cpp  COLLADAFWAnimationClip.cpp  COLLADAFWAxisInfo.cpp  COLLADAFWCamera.cpp  COLLADAFWColor.cpp  COLLADAFWConstants.cpp  COLLADAFWEffect.cpp  COLLADAFWEffectCommon.cpp  COLLADAFWExtraData.cpp  COLLADAFWExtraKeys.cpp  COLLADAFWFileInfo.cpp  COLLADAFWFloatOrDoubleArray.cpp  COLLADAFWFormula.cpp  COLLADAFWFormulas.cpp  COLLADAFWGeometricElement.cpp  COLLADAFWGeometry.cpp  COLLADAFWImage.cpp  COLLADAFWInput.cpp  COLLADAFWInputUnshared.cpp  COLLADAFWInstanceEffect.cpp  COLLADAFWInstanceGeometry.cpp  COLLADAFWInstanceKinematicsScene.cpp  COLLADAFWInstanceMaterial.cpp  COLLADAFWIntArray.cpp  COLLADAFWKinematicsController.cpp  COLLADAFWKinematicsModel.cpp  COLLADAFWKinematicsScene.cpp  COLLADAFWLight.cpp  COLLADAFWLoaderUtils.cpp  COLLADAFWMaterial.cpp  COLLADAFWMatrix.cpp  COLLADAFWMesh.cpp  COLLADAFWMeshPrimitive.cpp  COLLADAFWMorphController.cpp  COLLADAFWNode.cpp  COLLADAFWObject.cpp  COLLADAFWPrecompiledHeaders.cpp  COLLADAFWRenderState.cpp  COLLADAFWRoot.cpp  COLLADAFWRotate.cpp  (+13 more)
COLLADAFramework/template/: template.cpp  template.h
COLLADASaxFrameworkLoader/: .gitignore  BUILD.txt  CMakeLists.txt  COLLADASaxFrameworkLoader.patch  COLLADASaxFrameworkLoader.sln
COLLADASaxFrameworkLoader/COLLADASaxFrameworkLoader.xcodeproj/: project.pbxproj
COLLADASaxFrameworkLoader/include/: COLLADASaxFWLAccessor.h  COLLADASaxFWLArrayElement.h  COLLADASaxFWLAssetLoader.h  COLLADASaxFWLCOLLADACsymbol.h  COLLADASaxFWLColladaParserAutoGen.h  COLLADASaxFWLColladaParserAutoGenAttributes.h  COLLADASaxFWLColladaParserAutoGenEnums.h  COLLADASaxFWLColladaParserAutoGenFunctionMapFactory.h  COLLADASaxFWLColladaParserAutoGenPrivate.h  COLLADASaxFWLColladaParserAutoGenValidationData.h  COLLADASaxFWLDocumentProcessor.h  COLLADASaxFWLException.h  COLLADASaxFWLExtraDataElementHandler.h  COLLADASaxFWLExtraDataLoader.h  COLLADASaxFWLFileLoader.h  COLLADASaxFWLFilePartLoader.h  COLLADASaxFWLFormulasLinker.h  COLLADASaxFWLFormulasLoader.h  COLLADASaxFWLGeometricElement.h  COLLADASaxFWLGeometryLoader.h  COLLADASaxFWLGeometryMaterialIdInfo.h  COLLADASaxFWLGeometryObjectLoader.h  COLLADASaxFWLHelperLoaderBase.h  COLLADASaxFWLIError.h  COLLADASaxFWLIErrorHandler.h  COLLADASaxFWLIExtraDataCallbackHandler.h  COLLADASaxFWLIFilePartLoader.h  COLLADASaxFWLIParserImpl.h  COLLADASaxFWLIParserImpl14.h  COLLADASaxFWLIParserImpl15.h  COLLADASaxFWLInputShared.h  COLLADASaxFWLInputUnshared.h  COLLADASaxFWLInstanceArticulatedSystemLoader.h  COLLADASaxFWLInstanceKinematicsModelLoader.h  COLLADASaxFWLIntermediateTargetable.h  COLLADASaxFWLInterpolationTypeSource.h  COLLADASaxFWLJointsLoader.h  COLLADASaxFWLKinematicsIntermediateData.h  COLLADASaxFWLKinematicsSceneCreator.h  COLLADASaxFWLLibraryAnimationClipsLoader.h  (+48 more)
COLLADASaxFrameworkLoader/scripts/: COLLADASaxFrameworkLoader.vcproj  COLLADASaxFrameworkLoader.vcxproj  COLLADASaxFrameworkLoader.vcxproj.filters
COLLADASaxFrameworkLoader/src/: COLLADASaxFWLAssetLoader.cpp  COLLADASaxFWLCOLLADACsymbol.cpp  COLLADASaxFWLColladaParserAutoGen.cpp  COLLADASaxFWLColladaParserAutoGenFunctionMap.cpp  COLLADASaxFWLColladaParserAutoGenPrivate.cpp  COLLADASaxFWLColladaParserAutoGenPrivateEnums.cpp  COLLADASaxFWLColladaParserAutoGenPrivateFindElementHash.cpp  COLLADASaxFWLColladaParserAutoGenPrivateFunctionMap.cpp  (+61 more)
COLLADAStreamWriter/: .gitignore  BUGS  BUILD  CMakeLists.txt  COLLADAStreamWriter.sln  COPYING  INSTALL  LICENSE  README  SConscript
COLLADAValidator/: .gitignore  CMakeLists.txt  COLLADAValidator.sln  SConscript
DAEValidator/: CMakeLists.txt
GeneratedSaxParser/: .gitignore  CMakeLists.txt  GeneratedSaxParser.sln  SConscript
(+1680 files in other folders)
